- new method SCIPvarSetData()
- new method SCIPcreateInvalidSol()
- primal solutions may now contain values marked to be invalid (value is SCIP_INVALID), which means that the value
  is unknown; invalid values don't contribute to the objective value of the solution; a solution with invalid values
  can not be feasible

plugins:
- new presolver "implics" to find bound changes and aggregations out of the implication graph
- logic or constraint handler now adds implications on clauses with 2 literals to the implication graph
- and/or constraint handlers now add implications to the implication graph
- xor constraint handler now uses stronger LP relaxation without auxiliary variable for xor constraint with 2 operands
- modified probing order in probing presolver
- LP file reader now accepts the keyword "Integer" for defining the start of the integer variables section
- added preliminary version of "intdiving" heuristic (disabled in default settings)

parameters:
- modified meaning of parameter presolving/probing/maxtotaluseless
- new parameter branching/inference/conflictweight
- heuristics with freq = 0 and freqofs > 0 are now called in depth level freqofs instead of being called in the root node

features:
- changed handling of added constraints in separation calls
- modified bookkeeping of locally added and disabled and constraints such that the order of enabling and disabling
  constraints stays the same

Makefile:
- included version number in binary file name

fixed bugs:
- fixed bug in ZIMPL model reader with wrong chdir, if .zpl file is in current directory
- fixed bug in LP file reader with signed values without space between sign and value (e.g. "+2x" instead of "+ 2x")
- fixed various bugs in LP file reader
- also removed history_length, if NO_REMOVE_HISTORY is defined to support older versions of the readline library
- removed bug in implication addition
- fixed wrong assert with implications that imply a fixed variable